Fix layout issue

--- a/landing/new_landing/css/style.css
+++ b/landing/new_landing/css/style.css
@@ -1438,6 +1438,14 @@ Custom responsive
     }
 }
 
+@media screen and (max-width:991px){
+	body.bg-blur #TB_window{
+		top: 15px !important;
+		width: 94% !important;
+		left: 3% !important;
+	}
+}
+
 @media only screen and (max-width: 650px) {
     .headline{
 	font-size:24px;
@@ -1449,4 +1457,9 @@ Custom responsive
 	margin-left:15%;
 	width:70%;
     }	
+	
+	
+	#user_form_request{
+		width: 100% !important; 
+	}
 }
